--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <head lang="en">
+<html lang="en">
+  <head>
     <title>Cat Perry's Favorite Cats</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
